--- a/src/blocks/search-form/search-form.scss
+++ b/src/blocks/search-form/search-form.scss
@@ -1,6 +1,10 @@
 .search-form {
     width: 320px;
-    display: flex;
+    &__item {        
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
     &__label {
         display: block;
         margin-bottom: 16px;
