--- a/src/blocks/search-form/search-form.scss
+++ b/src/blocks/search-form/search-form.scss
@@ -1,5 +1,7 @@
 .search-form {
     width: 320px;
+    padding: 10px 0;
+    margin-bottom: 20px;
     &__item {        
         display: flex;
         justify-content: space-between;
