--- a/src/blocks/search-form/search-form.scss
+++ b/src/blocks/search-form/search-form.scss
@@ -32,6 +32,9 @@
     &__btn {
         height: 40px;
         width: 90px;
+        font-family: TT Norms;
+        font-weight: 500;
+        font-size: 14px;
         color: #FFFFFF;
         background-color: #444651;
         border: 0;
