--- a/src/main.scss
+++ b/src/main.scss
@@ -6,6 +6,8 @@
 @import "./blocks/search-form/search-form";
 // Filter
 @import "./blocks/filter/filter";
+// Filter
+@import "./blocks/device-info/device-info";
 // Wrapper
 @import "./blocks/wrap/wrap";
 
