--- a/src/blocks/wrap/wrap.scss
+++ b/src/blocks/wrap/wrap.scss
@@ -1,4 +1,6 @@
 .wrap {
-    padding: 30px 50px;    
+    margin: 30px auto;
     box-sizing: border-box;
+    width: 100%;
+    max-width: 900px;
 }
