--- a/src/blocks/filter/filter.scss
+++ b/src/blocks/filter/filter.scss
@@ -27,7 +27,6 @@
         height: 40px;;
     }
     &__info {
-        background: #F7F7F7;
-        border-radius: 5px;
+        grid-area: info;
     }
 }
