feat: add styles to radio buttons and submit button

--- a/src/main.scss
+++ b/src/main.scss
@@ -6,7 +6,9 @@
 @import "./blocks/search-form/search-form";
 // Filter
 @import "./blocks/filter/filter";
-// Filter
+// Dropdown
+@import "./blocks/dropdown/dropdown";
+// Device-Info
 @import "./blocks/device-info/device-info";
 // Wrapper
 @import "./blocks/wrap/wrap";
