--- a/src/blocks/filter/filter.scss
+++ b/src/blocks/filter/filter.scss
@@ -2,18 +2,20 @@
     width: 100%;
     display: grid;
     grid-template-columns: 32% 61.1%;    
+    grid-template-rows: 24% 45% 30%;    
     grid-column-gap: 6.9%;
     grid-row-gap: 20px;
     grid-template-areas: 
       "name info"
-      "form info"; 
+      "form info"
+      "btn info"; 
+      font-family: "TT Norms", sans-serif;
     &__header {
         grid-area: name;
         display: flex;
         justify-content: space-between;
     }
-    &__name {        
-        font-family: TT Norms;
+    &__name {  
         font-style: normal;
         font-weight: 500;
         font-size: 20px;
@@ -28,5 +30,91 @@
     }
     &__info {
         grid-area: info;
+    }
+    &__form{
+        grid-area: form;
+        display: flex;
+        flex-direction: column;
+    }
+    &__dropdown {
+        width: 76%;
+        margin-bottom: 10px;       
+    }
+    &__radio {
+        margin: 20px 0;
+    }
+    &__radio-item {
+        margin-bottom: 10px;
+    }
+    &__radiobtn {
+        &:checked,
+        &:not(:checked) {
+            position: absolute;
+            left: -9999px;
+        }
+
+        &:checked + .filter__label,
+        &:not(:checked) + label {
+            position: relative;
+            padding-left: 28px;
+            cursor: pointer;
+        }
+
+        &:checked + .filter__label:before,
+        &:not(:checked) + .filter__label:before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 18px;
+            height: 18px;
+            border: 2px solid #C1C1C1;
+            border-radius: 100%;
+            background: #FFFFFF;
+        }
+
+        &:checked + .filter__label:after,
+        &:not(:checked) + .filter__label:after {
+            content: '';
+            width: 10px;
+            height: 10px;
+            position: absolute;
+            top: 4px;
+            left: 4px;
+            
+            background: #4990E2;
+            border-radius: 100%;
+            transition: all 0.2s ease;
+        }
+
+        &:not(:checked) + .filter__label:after {
+            opacity: 0;
+            transform: scale(0);
+        }
+
+        &:checked + .filter__label:after {
+            opacity: 1;
+            transform: scale(1);
+        }
+    }
+    &__submit {
+        grid-area: btn;
+        display: flex;
+        align-items: flex-end;
+    }
+    &__btn {
+        
+        justify-self: flex-end;
+        width: 180px;
+        height: 40px;
+
+        font-family: "TT Norms", sans-serif;
+        font-weight: 500;
+        font-size: 14px;
+        color: #FFFFFF;
+
+        background: #4990E2;
+        border: 0;
+        border-radius: 3px;
     }
 }
