feat: add @media fix: index.html q

--- a/src/blocks/dropdown/dropdown.scss
+++ b/src/blocks/dropdown/dropdown.scss
@@ -1,26 +1,31 @@
 .dropdown {    
     position: relative;  
+    
     &__inner {
-        height: 30px !important;
+        height: 30px;
         width: 100%;
         padding-left: 12px;
 
         font-family: "TT Norms", sans-serif;
-        font-weight: 500;
+        font-weight: 400;
         font-size: 16px;
+        
         background: #FFFFFF;
         border: 1px solid #E9E9E9;
         appearance: none;
+        
         &:focus {
            outline: 0; 
         }  
         
     }  
+
     &__icon {
         position: absolute;
         top: 50%;
         right: 10px;
         display: block;
+
         pointer-events: none;
         transform: translateY(-50%);
     }
