--- a/src/blocks/filter/filter.scss
+++ b/src/blocks/filter/filter.scss
@@ -8,43 +8,67 @@
       "name info"
       "form info"
       "btn info"; 
-      font-family: "TT Norms", sans-serif;
+
+    font-family: "TT Norms", sans-serif;
+
+    @media (max-width: 850px) {
+        display: block;        
+    }
+
     &__header {
         grid-area: name;
         display: flex;
         justify-content: space-between;
+
+        @media (max-width: 850px) {
+            justify-content: flex-start;            
+            align-items: center;    
+            padding-bottom: 20px;   
+        }
     }
+
     &__name {  
         font-style: normal;
         font-weight: 500;
         font-size: 20px;
         color: #353535;
     }
+
     &__img {
+        width: 40px;
+        height: 40px;
         display: block;
         margin-right: 20px;
-        margin-top: 5px;
-        width: 40px;
-        height: 40px;;
+        margin-top: 5px;        
     }
+
     &__info {
         grid-area: info;
+
+        @media (max-width: 850px) {
+            margin-bottom: 20px;  
+        }
     }
+
     &__form{
         grid-area: form;
         display: flex;
         flex-direction: column;
     }
+
     &__dropdown {
         width: 76%;
-        margin-bottom: 10px;       
+        margin-bottom: 10px;    
     }
-    &__radio {
+// Form with radio buttons
+    &__radio { 
         margin: 20px 0;
     }
+// Radio button + label
     &__radio-item {
         margin-bottom: 10px;
     }
+// New radio button (hide old one and but new on it's place)
     &__radiobtn {
         &:checked,
         &:not(:checked) {
@@ -96,11 +120,13 @@
             transform: scale(1);
         }
     }
+    // Container for Submit btn
     &__submit {
         grid-area: btn;
         display: flex;
         align-items: flex-end;
     }
+    // Submit btn
     &__btn {
         align-self: flex-end;       
         width: 180px;
