--- a/src/blocks/report/report.scss
+++ b/src/blocks/report/report.scss
@@ -1,10 +1,11 @@
 .report {
+    width: 100%;
+    min-width: 900px;
     padding: 40px;
     padding-bottom: 60px;
 
     font-size: 16px;
     
-    overflow-x: auto;
     background-color: #FFFFFF;
     border: 1px dashed #939DA6;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
@@ -18,8 +19,7 @@
 
     &__table {
         width: 100%;
-        border-collapse: collapse;
-        
+        border-collapse: collapse;        
     }
   
     &__th {             
@@ -45,29 +45,14 @@
 
         &_offset {
             width: 14.7%
-        }
-// Hide old headers on smaller screen
-        @media (max-width: 850px) {
-            display: none;
-       }
-    }
-
-    &__thead {
-        @media (max-width: 850px) {
-            display: none;
-       }
-    }
+        }       
+    }   
 
     &__trow {
         border-bottom: 1px solid #E9E9E9;
         &:last-child {
             border: 0;
-        }
-        @media (max-width: 850px) {
-            display: block;
-            margin-bottom: 20px;
-            border: 0;
-       }
+        }       
     }
 
     &__td {
@@ -87,32 +72,10 @@
 
         &_user {
             font-size: 12px;            
-        }
-
-        @media (max-width: 850px) {
-            display: block;
-            text-align: right; 
-
-            font-size: 13px; 
-            
-            border-top: 1px solid #E9E9E9;
-
-            &:first-child {
-                border: 0;
-            }
-// Headers on the left on smaller screens
-            &::before {
-                content: attr(data-label);
-                float: left;                
-            }
-       }
+        }       
     }
     &__num {
-        position: relative;  
-
-        @media (max-width: 850px) {
-            padding-right: 50px;
-       }    
+        position: relative;         
 
         &::after {
             position: absolute;
@@ -122,11 +85,7 @@
             display: block;
             width:16px;
             height: 16px; 
-            background-image: url(./blocks/report/report__icon_ok.svg);
-
-            @media (max-width: 850px) {
-                left: 50px;
-           }
+            background-image: url(./blocks/report/report__icon_ok.svg);           
         }
 
         &_bad {
