--- a/src/blocks/search-form/search-form.scss
+++ b/src/blocks/search-form/search-form.scss
@@ -37,8 +37,8 @@
         height: 40px;
         width: 28.1%;
         max-width: 90px;        
-        
-        font-weight: 500;
+// font-weight really is 500 
+        font-weight: bold;
         font-size: 14px;
         color: #FFFFFF;
         background-color: #444651;
